parser/parser_leg.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = ":",
        peg$c1 = peg$literalExpectation(":", false),
        peg$c2 = function(Def) {return {ident: 'definition', value: [Def[0], Def[3]]}},
        peg$c3 = "(",
        peg$c4 = peg$literalExpectation("(", false),
        peg$c5 = "<=",
        peg$c6 = peg$literalExpectation("<=", false),
        peg$c7 = ">=",
        peg$c8 = peg$literalExpectation(">=", false),
        peg$c9 = "/=",
        peg$c10 = peg$literalExpectation("/=", false),
        peg$c11 = "<",
        peg$c12 = peg$literalExpectation("<", false),
        peg$c13 = ">",
        peg$c14 = peg$literalExpectation(">", false),
        peg$c15 = "=",
        peg$c16 = peg$literalExpectation("=", false),
        peg$c17 = "++",
        peg$c18 = peg$literalExpectation("++", false),
        peg$c19 = "--",
        peg$c20 = peg$literalExpectation("--", false),
        peg$c21 = "**",
        peg$c22 = peg$literalExpectation("**", false),
        peg$c23 = "/",
        peg$c24 = peg$literalExpectation("/", false),
        peg$c25 = "*",
        peg$c26 = peg$literalExpectation("*", false),
        peg$c27 = "%",
        peg$c28 = peg$literalExpectation("%", false),
        peg$c29 = "<<",
        peg$c30 = peg$literalExpectation("<<", false),
        peg$c31 = ">>",
        peg$c32 = peg$literalExpectation(">>", false),
        peg$c33 = "#",
        peg$c34 = peg$literalExpectation("#", false),
        peg$c35 = "root",
        peg$c36 = peg$literalExpectation("root", false),
        peg$c37 = "+",
        peg$c38 = peg$literalExpectation("+", false),
        peg$c39 = "-",
        peg$c40 = peg$literalExpectation("-", false),
        peg$c41 = "$",
        peg$c42 = peg$literalExpectation("$", false),
        peg$c43 = "&",
        peg$c44 = peg$literalExpectation("&", false),
        peg$c45 = "?",
        peg$c46 = peg$literalExpectation("?", false),
        peg$c47 = "!",
        peg$c48 = peg$literalExpectation("!", false),
        peg$c49 = "e",
        peg$c50 = peg$literalExpectation("e", false),
        peg$c51 = "\\",
        peg$c52 = peg$literalExpectation("\\", false),
        peg$c53 = ")",
        peg$c54 = peg$literalExpectation(")", false),
        peg$c55 = function(Operation) {return {ident: 'operation', op: Operation[4], value: [Operation[2], Operation[6]]}},
        peg$c56 = ",",
        peg$c57 = peg$literalExpectation(",", false),
        peg$c58 = function(Call) {return {ident: 'call', name: Call[1], args: [[["", "", Call[4]], Call[6]]]}},
        peg$c59 = "->",
        peg$c60 = peg$literalExpectation("->", false),
        peg$c61 = " ",
        peg$c62 = peg$literalExpectation(" ", false),
        peg$c63 = "=>",
        peg$c64 = peg$literalExpectation("=>", false),
        peg$c65 = function(Def) {return {ident: 'function_def', name: Def[0], args: Def[4], result: Def[8]}},
        peg$c66 = function(TypeDef) {return {ident: 'function_type', name: TypeDef[0], types: TypeDef[4]}},
        peg$c67 = "type",
        peg$c68 = peg$literalExpectation("type", false),
        peg$c69 = "head",
        peg$c70 = peg$literalExpectation("head", false),
        peg$c71 = "tail",
        peg$c72 = peg$literalExpectation("tail", false),
        peg$c73 = function(Rule) {return {ident: 'rule', rule: Rule[2], value: Rule[4]}},
        peg$c74 = /^[a-z]/,
        peg$c75 = peg$classExpectation([["a", "z"]], false, false),
        peg$c76 = /^[A-Z]/,
        peg$c77 = peg$classExpectation([["A", "Z"]], false, false),
        peg$c78 = /^[\/.]/,
        peg$c79 = peg$classExpectation(["/", "."], false, false),
        peg$c80 = function(text) {return {ident: 'name', value: text.join("")}},
        peg$c81 = function(Type) {return {ident: 'type', value: Type[0]}},
        peg$c82 = "'",
        peg$c83 = peg$literalExpectation("'", false),
        peg$c84 = function(quote) {return quote.join("")},
        peg$c85 = "\"",
        peg$c86 = peg$literalExpectation("\"", false),
        peg$c87 = peg$anyExpectation(),
        peg$c88 = function(char) {return char},
        peg$c89 = function(text) {return text.join("")},
        peg$c90 = peg$otherExpectation("atom"),
        peg$c91 = function(Atom) {return {ident: 'atom', value: Atom[1]}},
        peg$c92 = "[",
        peg$c93 = peg$literalExpectation("[", false),
        peg$c94 = "]",
        peg$c95 = peg$literalExpectation("]", false),
        peg$c96 = function(ArrIndex) {return {ident: 'array_index', array: ArrIndex[0], value: ArrIndex[2]}},
        peg$c97 = function(Array) {return {ident: 'array', value: [Array[1], Array.slice(2, Array.length-1)]}},
        peg$c98 = peg$otherExpectation("string"),
        peg$c99 = function(chars) { return {ident: 'string', value: chars.join("")} },
        peg$c100 = "b",
        peg$c101 = peg$literalExpectation("b", false),
        peg$c102 = function() { return "\b"; },
        peg$c103 = "f",
        peg$c104 = peg$literalExpectation("f", false),
        peg$c105 = function() { return "\f"; },
        peg$c106 = "n",
        peg$c107 = peg$literalExpectation("n", false),
        peg$c108 = function() { return "\n"; },
        peg$c109 = "r",
        peg$c110 = peg$literalExpectation("r", false),
        peg$c111 = function() { return "\r"; },
        peg$c112 = "t",
        peg$c113 = peg$literalExpectation("t", false),
        peg$c114 = function() { return "\t"; },
        peg$c115 = function(sequence) { return sequence; },
        peg$c116 = /^[ -!#-[\]-\u10FFFF]/,
        peg$c117 = peg$classExpectation([[" ", "!"], ["#", "["], ["]", "\u10FF"], "F", "F"], false, false),
        peg$c118 = peg$otherExpectation("number"),
        peg$c119 = /^[0-9]/,
        peg$c120 = peg$classExpectation([["0", "9"]], false, false),
        peg$c121 = ".",
        peg$c122 = peg$literalExpectation(".", false),
        peg$c123 = function(left, right) { return {ident: 'number', value: parseFloat(left.join("") + "." +   right.join(""))}},
        peg$c124 = function(left) {return {ident: 'number', value: parseFloat(left.join(""))}},
        peg$c125 = function(left, right) { return {ident: 'number', value: -parseFloat(left.join("") + "." +   right.join(""))}},
        peg$c126 = function(left) {return {ident: 'number', value: -parseFloat(left.join(""))}},
        peg$c127 = peg$otherExpectation("integer"),
        peg$c128 = function() { return parseInt(text(), 10); },
        peg$c129 = "/*",
        peg$c130 = peg$literalExpectation("/*", false),
        peg$c131 = "*/",
        peg$c132 = peg$literalExpectation("*/", false),
        peg$c133 = function(Comment) {return {ident: 'comment', value: Comment.join("")}},
        peg$c134 = peg$otherExpectation("whitespace"),
        peg$c135 = /^[ \t\n\r]/,
        peg$c136 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3, s4, s5;

      s0 = [];
      s1 = peg$currPos;
      s2 = peg$parseexpr();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsecomment();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              s2 = [s2, s3, s4, s5];
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$currPos;
        s2 = peg$parseexpr();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = peg$parsecomment();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s2 = [s2, s3, s4, s5];
                s1 = s2;
              } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parseexpr() {
      var s0;

      s0 = peg$parseDefinition();
      if (s0 === peg$FAILED) {
        s0 = peg$parseFunctionTypeDefinition();
        if (s0 === peg$FAILED) {
          s0 = peg$parseFunctionDefinition();
          if (s0 === peg$FAILED) {
            s0 = peg$parsecomment();
          }
        }
      }

      return s0;
    }

    function peg$parseExpression() {
      var s0;

      s0 = peg$parseCall();
      if (s0 === peg$FAILED) {
        s0 = peg$parseOperation();
        if (s0 === peg$FAILED) {
          s0 = peg$parseArrayIndex();
          if (s0 === peg$FAILED) {
            s0 = peg$parseName();
            if (s0 === peg$FAILED) {
              s0 = peg$parseArray();
              if (s0 === peg$FAILED) {
                s0 = peg$parseatom();
                if (s0 === peg$FAILED) {
                  s0 = peg$parsestring();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseNumber();
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseDefinition() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseName();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s3 = peg$c0;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseName();
            if (s5 === peg$FAILED) {
              s5 = peg$parseArray();
            }
            if (s5 !== peg$FAILED) {
              s2 = [s2, s3, s4, s5];
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseOperation() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      s1 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 40) {
        s2 = peg$c3;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseExpression();
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c5) {
                s6 = peg$c5;
                peg$currPos += 2;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c6); }
              }
              if (s6 === peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c7) {
                  s6 = peg$c7;
                  peg$currPos += 2;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c8); }
                }
                if (s6 === peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c9) {
                    s6 = peg$c9;
                    peg$currPos += 2;
                  } else {
                    s6 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c10); }
                  }
                  if (s6 === peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 60) {
                      s6 = peg$c11;
                      peg$currPos++;
                    } else {
                      s6 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c12); }
                    }
                    if (s6 === peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 62) {
                        s6 = peg$c13;
                        peg$currPos++;
                      } else {
                        s6 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c14); }
                      }
                      if (s6 === peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 61) {
                          s6 = peg$c15;
                          peg$currPos++;
                        } else {
                          s6 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c16); }
                        }
                        if (s6 === peg$FAILED) {
                          if (input.substr(peg$currPos, 2) === peg$c17) {
                            s6 = peg$c17;
                            peg$currPos += 2;
                          } else {
                            s6 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c18); }
                          }
                          if (s6 === peg$FAILED) {
                            if (input.substr(peg$currPos, 2) === peg$c19) {
                              s6 = peg$c19;
                              peg$currPos += 2;
                            } else {
                              s6 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c20); }
                            }
                            if (s6 === peg$FAILED) {
                              if (input.substr(peg$currPos, 2) === peg$c21) {
                                s6 = peg$c21;
                                peg$currPos += 2;
                              } else {
                                s6 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c22); }
                              }
                              if (s6 === peg$FAILED) {
                                if (input.charCodeAt(peg$currPos) === 47) {
                                  s6 = peg$c23;
                                  peg$currPos++;
                                } else {
                                  s6 = peg$FAILED;
                                  if (peg$silentFails === 0) { peg$fail(peg$c24); }
                                }
                                if (s6 === peg$FAILED) {
                                  if (input.charCodeAt(peg$currPos) === 42) {
                                    s6 = peg$c25;
                                    peg$currPos++;
                                  } else {
                                    s6 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c26); }
                                  }
                                  if (s6 === peg$FAILED) {
                                    if (input.charCodeAt(peg$currPos) === 37) {
                                      s6 = peg$c27;
                                      peg$currPos++;
                                    } else {
                                      s6 = peg$FAILED;
                                      if (peg$silentFails === 0) { peg$fail(peg$c28); }
                                    }
                                    if (s6 === peg$FAILED) {
                                      if (input.substr(peg$currPos, 2) === peg$c29) {
                                        s6 = peg$c29;
                                        peg$currPos += 2;
                                      } else {
                                        s6 = peg$FAILED;
                                        if (peg$silentFails === 0) { peg$fail(peg$c30); }
                                      }
                                      if (s6 === peg$FAILED) {
                                        if (input.substr(peg$currPos, 2) === peg$c31) {
                                          s6 = peg$c31;
                                          peg$currPos += 2;
                                        } else {
                                          s6 = peg$FAILED;
                                          if (peg$silentFails === 0) { peg$fail(peg$c32); }
                                        }
                                        if (s6 === peg$FAILED) {
                                          if (input.charCodeAt(peg$currPos) === 35) {
                                            s6 = peg$c33;
                                            peg$currPos++;
                                          } else {
                                            s6 = peg$FAILED;
                                            if (peg$silentFails === 0) { peg$fail(peg$c34); }
                                          }
                                          if (s6 === peg$FAILED) {
                                            if (input.substr(peg$currPos, 4) === peg$c35) {
                                              s6 = peg$c35;
                                              peg$currPos += 4;
                                            } else {
                                              s6 = peg$FAILED;
                                              if (peg$silentFails === 0) { peg$fail(peg$c36); }
                                            }
                                            if (s6 === peg$FAILED) {
                                              if (input.charCodeAt(peg$currPos) === 43) {
                                                s6 = peg$c37;
                                                peg$currPos++;
                                              } else {
                                                s6 = peg$FAILED;
                                                if (peg$silentFails === 0) { peg$fail(peg$c38); }
                                              }
                                              if (s6 === peg$FAILED) {
                                                if (input.charCodeAt(peg$currPos) === 45) {
                                                  s6 = peg$c39;
                                                  peg$currPos++;
                                                } else {
                                                  s6 = peg$FAILED;
                                                  if (peg$silentFails === 0) { peg$fail(peg$c40); }
                                                }
                                                if (s6 === peg$FAILED) {
                                                  if (input.charCodeAt(peg$currPos) === 36) {
                                                    s6 = peg$c41;
                                                    peg$currPos++;
                                                  } else {
                                                    s6 = peg$FAILED;
                                                    if (peg$silentFails === 0) { peg$fail(peg$c42); }
                                                  }
                                                  if (s6 === peg$FAILED) {
                                                    if (input.charCodeAt(peg$currPos) === 38) {
                                                      s6 = peg$c43;
                                                      peg$currPos++;
                                                    } else {
                                                      s6 = peg$FAILED;
                                                      if (peg$silentFails === 0) { peg$fail(peg$c44); }
                                                    }
                                                    if (s6 === peg$FAILED) {
                                                      if (input.charCodeAt(peg$currPos) === 63) {
                                                        s6 = peg$c45;
                                                        peg$currPos++;
                                                      } else {
                                                        s6 = peg$FAILED;
                                                        if (peg$silentFails === 0) { peg$fail(peg$c46); }
                                                      }
                                                      if (s6 === peg$FAILED) {
                                                        if (input.charCodeAt(peg$currPos) === 33) {
                                                          s6 = peg$c47;
                                                          peg$currPos++;
                                                        } else {
                                                          s6 = peg$FAILED;
                                                          if (peg$silentFails === 0) { peg$fail(peg$c48); }
                                                        }
                                                        if (s6 === peg$FAILED) {
                                                          if (input.charCodeAt(peg$currPos) === 101) {
                                                            s6 = peg$c49;
                                                            peg$currPos++;
                                                          } else {
                                                            s6 = peg$FAILED;
                                                            if (peg$silentFails === 0) { peg$fail(peg$c50); }
                                                          }
                                                          if (s6 === peg$FAILED) {
                                                            if (input.charCodeAt(peg$currPos) === 92) {
                                                              s6 = peg$c51;
                                                              peg$currPos++;
                                                            } else {
                                                              s6 = peg$FAILED;
                                                              if (peg$silentFails === 0) { peg$fail(peg$c52); }
                                                            }
                                                          }
                                                        }
                                                      }
                                                    }
                                                  }
                                                }
                                              }
                                            }
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parse_();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseExpression();
                  if (s8 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 41) {
                      s9 = peg$c53;
                      peg$currPos++;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c54); }
                    }
                    if (s9 !== peg$FAILED) {
                      s2 = [s2, s3, s4, s5, s6, s7, s8, s9];
                      s1 = s2;
                    } else {
                      peg$currPos = s1;
                      s1 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s1;
                    s1 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s1;
                  s1 = peg$FAILED;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c55(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseCall() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;
